--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,24 @@
     </style>
 
     <style name="Theme.DoorApp" parent="Base.Theme.DoorApp" />
+
+    <style name="header">
+        <item name="android:fontWeight">800</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+    
+    <style name="prompt">
+        <item name="android:fontWeight">400</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="info_context">
+        <item name="android:fontWeight">400</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="info">
+        <item name="android:fontWeight">700</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
