--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,7 +117,7 @@
 
     <Button
         android:id="@+id/btn_add"
-        android:text="Add New Door"
+        android:text="@string/add_new_door"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="16dp"
@@ -129,6 +129,7 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_setting"
+        android:contentDescription="setting button"
         app:icon="@drawable/setting_wrapper"
         app:iconSize="40dp"
         app:iconPadding="0dp"
